--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Blog Title"
+title: "13th Avenue"
 author: "Blog Author"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b> by <b><a href=\"https://github.com/niklasbuschmann\">@niklasbuschmann</a></b>"
 permalink: /:title/
