--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ minimal: false               # use simpler style
 # Menu
 
 navigation:
-  - {file: "about.md", icon: home}
-  - {file: "README.md", icon: address-card}
+  - {file: "index.html", icon: home}
+  - {file: "about.md", icon: address-card}
 
 external:                    # see http://fontawesome.com/icons
 #  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
