editing layout, added authors, etc.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ date_format: "%B %d, %Y"
 # Layout
 
 sidebar: false               # show a sidebar instead of the usual header
-show_excerpts: false         # show article excerpts on the home page
+show_excerpts: true         # show article excerpts on the home page
 show_related: true           # show the previous and next links after every post
 show_description: true       # show the site description in the sidebar
 show_title: false            # always keep the site title visible
@@ -24,7 +24,6 @@ minimal: false               # use simpler style
 navigation:
   - {file: "index.html", icon: home}
   - {file: "about.md", icon: address-card}
-  - {file: "authors.html"}
 
 external:                    # see http://fontawesome.com/icons
 #  - {title: Mail, icon: envelope, url: "mailto:niklasbuschmann@users.noreply.github.com"}
@@ -41,3 +40,19 @@ plugins:
 collections:
   authors:
     output: true
+
+defaults:
+  - scope:
+      path: ""
+      type: "authors"
+    values:
+      layout: "author"
+  - scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  - scope:
+      path: ""
+    values:
+      layout: "default"
